--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,5 @@
-// {
-//     "rewrites": [
-//         { "source": "/(.*)", "destination": "/api/index" }
-//     ]
-// }
-
-
 {
-    "username": "yourusername",
-    "devicePair": {
-      "inputDevice": {
-        "id": "SmartDisasterPrevention1234",
-        "type": "SmartDisasterPrevention"
-      },
-      "outputDevices": [
-        { 
-            "id": "flameAlarm1234",
-            "type": "flameAlarm",
-            "subTopic": "SmartDisasterPrevention/flameAlarm/flameAlarm1234"
-        },
-        { 
-            "id": "temperature1234",
-            "type": "temperature",
-            "subTopic": "SmartDisasterPrevention/temperature/temperature1234"
-        }
-      ]
-    }
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/api/index" }
+    ]
 }
